Add database and app initialization using docker

--- a/ormconfig.docker.json
+++ b/ormconfig.docker.json
@@ -1,7 +1,7 @@
 {
     "type": "postgres",
-    "host": "localhost",
-    "port": 5431,
+    "host": "db",
+    "port": 5432,
     "username": "test-user",
     "password": "test-password",
     "database": "stock-quotes",
