--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    
+    "test:docker-e2e": "docker-compose -f docker-compose-e2e-tests.yml up --exit-code-from test-app",
+    "start:db": "docker-compose up -d db",
+    "start:docker": "docker-compose up"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
